codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__compact_unified_exec_wait_status_uses_one_row.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 48))"
---
• Waiting for background terminal (0s • esc to …


› Ask Codex to do anything

  gpt-5.6-sol default · /tmp/project
