codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_capacity_retry_warning.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: rendered
---
⚠ The selected model is at capacity. Retrying in 1 minute (1/4).
