codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_command_account_identity_may_be_stale.snap
---
source: tui/src/chatwidget/tests/status_command_tests.rs
expression: account_section
---
│  Account:              user@example.com (Plus)                       │
│                        Account identity may be stale after automatic │
│                        failover.                                     │
│  Limits:               refresh requested; run /status again shortly. │
