codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_widget_compacting_context.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 8934
expression: terminal.backend()
---
"                                                                                "
"• Compacting context (0s • esc to interrupt)                                    "
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  ? for shortcuts                                            100% context left  "
